<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Names -->
    <string name="app_name">BigDiscounts</string>

    <!-- Labels -->
    <string name="choose_city">Choose City</string>
    <string name="ok">OK</string>
    <string name="select_city">Select City</string>
    <string name="next">Next</string>
    <string name="categories">Categories</string>
    <string name="please_wait">Please Wait...</string>
    <string name="all_categories">All Categories</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="popular_deals">Popular Deals</string>
    <string name="rate">Rate it</string>
    <string name="attempting_reg">Attempting Registration</string>
    <string name="registeration_form">Registeration Form</string>

    <!-- Messages -->
    <string name="no_internert">Sorry No Internet!</string>
    <string name="could_not_connect_to_server">Oops Couldnot Connect To Server!</string>
    <string name="no_data">Sorry No Data!</string>
    <string name="succesfully_rated">Succesfully Rated</string>
    <string name="try_again">Try Again</string>
    <string name="pls_complete_all_fields">Please Completer All Fields</string>
    <string name="no_registered">OOps You Are Not Registered</string>
    <string name="thanks_registeration">Thanks For Registeration</string>

    <!-- Keys -->
    <string name="key_ad_id">id</string>
    <string name="key_city_name">city</string>
    <string name="key_city_id">city_id</string>
    <string name="key_category_id">category_id</string>
    <string name="key_category_name">category_name</string>
    <string name="google_maps_key">AIzaSyCNQVl9YItpXPx-0yTiBHbP4H7u94ShpuM</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>