<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launcher_activity_bg" >

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >
    </ProgressBar>

    <TextView
        android:id="@+id/tv_network_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressbar"
        android:layout_centerInParent="true"
        android:text="@string/please_wait"
        android:textSize="@dimen/medium_text_size" />

    <LinearLayout
        android:id="@+id/ll_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_30dp"
        android:visibility="invisible" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/select_city"
            android:textColor="@color/RoyalBlue"
            android:textSize="@dimen/very_large_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_marginTop="@dimen/margin_7dp"
            android:weightSum="100" >

            <Spinner
                android:id="@+id/spineer_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:background="@color/White"
                android:gravity="center_horizontal" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@color/RoyalBlue"
                android:padding="@dimen/padding_5dp"
                android:src="@drawable/arrow" />
        </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/RoyalBlue"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

</RelativeLayout>